ci: 增加对 Windows 系统的支持，更新测试和发布工作流以包含 Windows 构建和测试，上传相应的构建产物

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - name: Checkout code
@@ -24,18 +24,33 @@ jobs:
       - name: Setup Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: '6.2'
+          swift-version: '6.0.2'
 
       - name: Swift version
         run: swift --version
 
-      - name: Make test script executable
+      # Unix 系统使用 bash 脚本
+      - name: Make test script executable (Unix)
+        if: runner.os != 'Windows'
         run: chmod +x .cursor/Scripts/test_game.sh
 
-      - name: Run all tests
+      - name: Run all tests (Unix)
+        if: runner.os != 'Windows'
         run: ./.cursor/Scripts/test_game.sh all
 
-      - name: Upload build artifacts (Debug)
+      # Windows 使用 PowerShell 命令
+      - name: Build and test (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "Building Debug..."
+          swift build
+          Write-Host "Building Release..."
+          swift build -c release
+          Write-Host "Build completed successfully!"
+
+      # 上传构建产物
+      - name: Upload build artifacts (Linux)
         if: success() && matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
@@ -43,10 +58,18 @@ jobs:
           path: .build/debug/GameCLI
           retention-days: 7
 
-      - name: Upload build artifacts (Debug - macOS)
+      - name: Upload build artifacts (macOS)
         if: success() && matrix.os == 'macos-latest'
         uses: actions/upload-artifact@v4
         with:
           name: salu-debug-macos
           path: .build/debug/GameCLI
+          retention-days: 7
+
+      - name: Upload build artifacts (Windows)
+        if: success() && matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: salu-debug-windows
+          path: .build/debug/GameCLI.exe
           retention-days: 7
