--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,7 @@ permissions:
 jobs:
   build-and-release:
     name: Build and Release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        include:
-          - os: ubuntu-latest
-            artifact_name: salu-linux-x64
-            asset_name: salu-linux-x64
-          - os: macos-latest
-            artifact_name: salu-macos-x64
-            asset_name: salu-macos-x64
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -41,28 +32,28 @@ jobs:
       - name: Prepare artifact
         run: |
           mkdir -p artifact
-          cp .build/release/GameCLI artifact/${{ matrix.artifact_name }}
-          chmod +x artifact/${{ matrix.artifact_name }}
+          cp .build/release/GameCLI artifact/salu-macos-x64
+          chmod +x artifact/salu-macos-x64
 
       - name: Create tarball
         run: |
           cd artifact
-          tar -czf ${{ matrix.asset_name }}.tar.gz ${{ matrix.artifact_name }}
+          tar -czf salu-macos-x64.tar.gz salu-macos-x64
           cd ..
 
       - name: Upload artifact
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
-          path: artifact/${{ matrix.asset_name }}.tar.gz
+          name: salu-macos-x64
+          path: artifact/salu-macos-x64.tar.gz
           retention-days: 90
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: artifact/${{ matrix.asset_name }}.tar.gz
+          files: artifact/salu-macos-x64.tar.gz
           draft: false
           prerelease: false
           generate_release_notes: true
