--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,28 +32,28 @@ jobs:
       - name: Prepare artifact
         run: |
           mkdir -p artifact
-          cp .build/release/GameCLI artifact/salu-macos-x64
-          chmod +x artifact/salu-macos-x64
+          cp .build/release/GameCLI artifact/salu-macos
+          chmod +x artifact/salu-macos
 
       - name: Create tarball
         run: |
           cd artifact
-          tar -czf salu-macos-x64.tar.gz salu-macos-x64
+          tar -czf salu-macos.tar.gz salu-macos
           cd ..
 
       - name: Upload artifact
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: salu-macos-x64
-          path: artifact/salu-macos-x64.tar.gz
+          name: salu-macos
+          path: artifact/salu-macos.tar.gz
           retention-days: 90
 
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: artifact/salu-macos-x64.tar.gz
+          files: artifact/salu-macos.tar.gz
           draft: false
           prerelease: false
           generate_release_notes: true
