test: add UI tests for GameCLI and implement test mode for stable testing
- Introduced `GameCLIUITests` to validate UI interactions and game flow.
- Added `TestMode` to facilitate faster and more reliable UI tests by modifying game behavior.
- Updated `Package.swift` to include new test target for UI tests.
- Enhanced build workflows to run all Swift tests, ensuring comprehensive testing coverage.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,17 +25,25 @@ jobs:
 
       - name: Swift version
         run: swift --version
-
-      - name: Make test script executable
-        run: chmod +x .cursor/Scripts/test_game.sh
-
-      - name: Run all tests
-        run: ./.cursor/Scripts/test_game.sh all
+      
+      # Build（debug + release），确保：
+      # 1) 可执行文件可生成（供 CLI UI Tests 用 Process 启动）
+      # 2) release 配置也能编译通过（避免“只在 debug 能 build”）
+      - name: Build debug
+        run: swift build
+      
+      - name: Build release
+        run: swift build -c release
+      
+      - name: Run all Swift tests (XCTest)
+        run: swift test
 
       - name: Upload build artifacts
         if: success()
         uses: actions/upload-artifact@v4
         with:
           name: salu-debug-macos
-          path: .build/debug/GameCLI
+          path: |
+            .build/debug/GameCLI
+            .build/release/GameCLI
           retention-days: 7
