--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
 
       - name: Build release binary
         run: swift build -c release
+      
+      - name: Run all Swift tests (XCTest)
+        run: swift test
 
       - name: Prepare artifact
         run: |
